--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
   },
   "homepage": "https://github.com/ktkiiski/broilerpan#readme",
   "dependencies": {
-    "@types/chalk": "^0.4.31",
-    "@types/semver": "^5.3.33",
-    "@types/yargs": "^8.0.2",
     "chalk": "^2.0.1",
     "semver": "^5.4.1",
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2",
     "yargs": "^8.0.2"
+  },
+  "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/node": "^8.0.32",
+    "@types/semver": "^5.4.0",
+    "@types/yargs": "^8.0.2"
   }
 }
