--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/chalk": "^0.4.31",
     "@types/node": "^8.0.32",
     "@types/semver": "^5.4.0",
-    "@types/yargs": "^8.0.2"
+    "@types/yargs": "^8.0.2",
+    "tslib": "^1.7.1"
   }
 }
